Implement filtering version via semver ranges

--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "tui"
   ],
   "dependencies": {
-    "cheerio": "^0.22.0"
+    "cheerio": "^0.22.0",
+    "lodash": "^4.17.2",
+    "semver": "^5.3.0",
+    "bluebird": "^3.4.6",
+    "git-semver-tags": "^1.1.2",
   },
   "devDependencies": {
-    "bluebird": "^3.4.6",
     "del": "^2.2.2",
-    "git-semver-tags": "^1.1.2",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
     "gulp-jsdoc3": "^1.0.1"
