--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lodash": "^4.17.2",
     "semver": "^5.3.0",
     "bluebird": "^3.4.6",
-    "git-semver-tags": "^1.1.2",
+    "git-semver-tags": "^1.1.2"
   },
   "devDependencies": {
     "del": "^2.2.2",
