--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "tui"
   ],
   "dependencies": {
+    "bluebird": "^3.4.6",
     "cheerio": "^0.22.0",
+    "git-semver-tags": "^1.1.2",
     "lodash": "^4.17.2",
     "semver": "^5.3.0",
-    "bluebird": "^3.4.6",
-    "git-semver-tags": "^1.1.2"
+    "semver-truncate": "^1.1.2"
   },
   "devDependencies": {
     "del": "^2.2.2",
